# test-tetrika

./: .gitignore  pyproject.toml
task1/: solution.py
task2/: beasts.csv  solution.py  solution_api.py
task3/: solution.py  solution_sets.py
tests/: test_task1.py  test_task2.py  test_task3.py
