[tool.poetry]
name = "test-tetrika"
version = "0.1.0"
description = ""
authors = ["darialissi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.6"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.12.3"
aiocsv = "^1.3.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
