[tool.poetry]
name = "test-tetrika"
version = "0.1.0"
description = ""
authors = ["darialissi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"
wikipedia-api = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
